Draw pictures from wavefron obj files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(tinyrenderer)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Werror -O0 -ggdb -pg")
 
-set(SOURCE_FILES src/tgaimage.cpp src/main.cpp)
+set(SOURCE_FILES src/tgaimage.cpp src/main.cpp src/model.cpp)
 add_executable(tinyrenderer ${SOURCE_FILES})
